--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -4,10 +4,10 @@
 
 <style>
   :root {
-    --card-bg: rgba(200, 190, 149, 0.264);
+    --card-bg: linear-gradient(90deg, rgb(253, 243, 243) 0%, rgba(218, 230, 255, 0.987) 50%);
     --card-border-color: rgba(182, 120, 34, 0.25);
     --primary-text: #120808;
-    --secondary-text: #9e9354;
+    --secondary-text: #433c16;
     --hover-bg: rgba(0, 123, 255, 0.7);
     --hover-border-color: rgba(0, 123, 255, 1);
     --logout-hover-bg: rgba(220, 53, 69, 0.7);
@@ -21,7 +21,7 @@
     align-items: center;
     min-height: 99vh;
     padding: 4rem;
-    padding-bottom: 60%;
+    /* padding-bottom: 40%; */
   }
 
   .dashboard-card {
