--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -36,21 +36,21 @@
                     <p>বনগ্রাম কি, ম, স, মাধ্যমিক বিদ্যালয়ের সমাবেশ</p>
                 </div>
             </div>
-            
-            <div class="slide">
-                <img src="https://i.ibb.co.com/mC0bF1tR/Screenshot-2025-08-26-00-21-32-906-com-google-android-apps-maps-2.jpg" alt="Screenshot-2025-08-26-00-21-32-906-com-google-android-apps-maps-2" border="0">
+             <div class="slide">
+                <img src="https://i.ibb.co.com/RGhxzr5V/Whats-App-Image-2025-08-29-at-8-18-41-PM.jpg" alt="School Building">
                 <div class="slide-caption">
-                    <h3>আমাদের বিদ্যালয় ভবন</h3>
-                    <p>বনগ্রাম কি, ম, স, মাধ্যমিক বিদ্যালয়ের সুন্দর ও আধুনিক ভবন</p>
+                    <h3>আমাদের মাল্টিমিডিয়া ক্লাসরুম</h3>
+                    <p>উচ্চ মানের আধুনিক মাল্টিমিডিয়া ক্লাসরুম, যেখানে শিক্ষার্থীরা প্রযুক্তির মাধ্যমে সহজে ও দ্রুত শেখার সুযোগ পায়।</p>
                 </div>
             </div>
             <div class="slide">
-                <img src="https://bongram-secondaryschool.web.app/assets/school3-c239234e.jpg" alt="School Building">
+                <img src="https://i.ibb.co.com/4ZPC5x0p/Whats-App-Image-2025-08-29-at-8-17-01-PM.jpg" alt="Screenshot-2025-08-26-00-21-32-906-com-google-android-apps-maps-2" border="0">
                 <div class="slide-caption">
-                    <h3>আমাদের সমাবেশ</h3>
-                    <p>বনগ্রাম কি, ম, স, মাধ্যমিক বিদ্যালয়ের সমাবেশ</p>
+                    <h3>আমাদের ক্যাম্পাস</h3>
+                    <p>অরুণ বিদ্যালয় ক্যাম্পাসের সুন্দর এবং আধুনিক পরিবেশ, যেখানে শিক্ষার আলো জ্বলে উঠে প্রতিটি কোণে।</p>
                 </div>
             </div>
+           
             <!-- Add 3 more slides with your school images -->
         </div>
         
